css/style.css
.grid-gallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

/* images */
img {
    max-width: 100%;
    width: 100%;
    height: auto;
}

source {
    max-width: 100%;
    height: auto;
}

video {
    max-width: 100%;
    height: auto;
}

/* font styles */
h1 {
    border: 5px solid red;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
}

h2 {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

h3 {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

p {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

ul {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}



/* hide skip to main */
.skip-main {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

.skip-main:focus {
    position: static;
    width: auto;
    width: auto;
}

/* navigation style */
nav {
    background-color: black;
}
nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

nav ul li {
    display: block;
    margin-bottom: 30px;
}

nav ul li a {
    text-decoration: none;
    padding: 15px 25px;
    font-size: 16px;
    color: aqua;
    background-color: black;
    transition: background-color 0.3s;
}

nav ul li.active a {
    background-color: aqua;
    color: black;
}

nav ul li a:hover {
    color: black;
    background-color: aqua;
}

/* desktop nav styling */

/* @media only screen and (min-width: 601px) {
    nav ul {
        display: inline-block;
        text-align: left;
    }

    nav ul li {
        display: inline-block;
        margin-right: 20px;
        margin-bottom: 0px;
    }
} */

